cmake_minimum_required(VERSION 3.22)
project(Task2_number1)

set(CMAKE_CXX_STANDARD 14)

add_executable(Task2_number1 main.cpp Well.cpp Well.h OilWell.cpp OilWell.h GazWell.cpp GazWell.h WaterWell.cpp WaterWell.h Field.cpp Field.h OilField.cpp OilField.h GazField.cpp GazField.h WaterField.cpp WaterField.h ConsoleUI.cpp ConsoleUI.h)
